--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="assets/images/logo/logogreen.svg">
     <title>Rainydays | Home</title>
+    <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -102,7 +103,7 @@
             </div>
         </nav>
     </header>
-    <main class="content">
+    <main id="content">
         
     </main>
     <footer class="footer">
