Tweaked css content

--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
         </nav>
     </header>
     <main id="content">
-        
+        <div>
+            <select id="filter" type="text" aria-label="filter">
+                <option value="all" id="filterAll">All</option>    
+                <option value="men" id="filterMen">Men</option>    
+                <option value="women" id="filterWomen">Women</option>    
+            </select>
+        </div>
     </main>
     <footer class="footer">
         <form class="languageForm" aria-label="Select different language">
